// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Addon/Docs/Controls with controls 1`] = `
<storybook-dynamic-app-root
  cfr={[Function CodegenComponentFactoryResolver]}
  data={[Function Object]}
  target={[Function ViewContainerRef_]}
>
  <ng-component>
    <storybook-button-component
      _nghost-a-c23=""
      ng-reflect-text="Hello Button"
    >
      <button
        _ngcontent-a-c23=""
      >
        Hello Button
      </button>
    </storybook-button-component>
  </ng-component>
</storybook-dynamic-app-root>
`;

exports[`Storyshots Addon/Docs/Controls with some emoji 1`] = `
<storybook-dynamic-app-root
  cfr={[Function CodegenComponentFactoryResolver]}
  data={[Function Object]}
  target={[Function ViewContainerRef_]}
>
  <ng-component>
    <storybook-button-component
      _nghost-a-c24=""
      ng-reflect-text="😀 😎 👍 💯"
    >
      <button
        _ngcontent-a-c24=""
      >
        😀 😎 👍 💯
      </button>
    </storybook-button-component>
  </ng-component>
</storybook-dynamic-app-root>
`;
